# scrapy-redis

./: pyproject.toml
src/scrapy_redis/: spiders.py
