[tool.poetry]
name = "scrapy-redis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.11.0"
redis = "^5.0.0"
six = "^1.16.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
mock = "^5.1.0"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
tox = "^4.11.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
